# SIGIT

./: .gitignore  README.md  install.sh  installkali.sh  pyproject.toml  requirements.txt  run.py  sigit.py
sigit/cli/: display.py  menu.py
sigit/core/: client.py  colors.py  config.py
sigit/services/: __init__.py  breach_checker.py  dns_recon.py  github_recon.py  header_analyzer.py  ip_location.py  mail_finder.py  phone_info.py  port_scanner.py  reverse_ip.py  ssl_checker.py  subdomain_scanner.py  tech_detector.py  user_recon.py  whois.py
